--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>
-  {{title}}
-</h1>
+<div class='container'>
+  <h1 class='text-center'>
+    {{title}}
+  </h1>
+  <div class='row'>
+    <app-clock></app-clock>
+  </div>
+</div>
